Problemas Lactancia, Succión, Frecuencia
Problemas Lactancia parte 2
Succión y Posiiones Correctas
Menu Frecuencia de Lactar
*pruebas de redimensionamiento de menús

--- a/PROLACTANCIA/app/src/main/AndroidManifest.xml
+++ b/PROLACTANCIA/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".MadreEnferma"></activity>
+        <activity android:name=".MenuFrecuenciaLactar"></activity>
+        <activity android:name=".SuccionPosicion" />
+        <activity android:name=".MadreEnferma" />
         <activity android:name=".Abceso" />
         <activity android:name=".Mastitis" />
         <activity android:name=".DuctosObstruidos" />
