--- a/PROLACTANCIA/app/src/main/AndroidManifest.xml
+++ b/PROLACTANCIA/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.packages.prolactancia">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="Android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
@@ -16,35 +22,51 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name="com.packages.prolactancia.VideoBeneficios2"></activity>
-        <activity android:name="com.packages.prolactancia.Maps" />
-        <activity android:name="com.packages.prolactancia.VideoHigiene" />
-        <activity android:name="com.packages.prolactancia.VideoBeneficios" />
-        <activity android:name="com.packages.prolactancia.MitosVerdades" />
-        <activity android:name="com.packages.prolactancia.Donacion" />
-        <activity android:name="com.packages.prolactancia.AlmacenamientoTraslado" />
-        <activity android:name="com.packages.prolactancia.MenuExtraccion" />
-        <activity android:name="com.packages.prolactancia.EstimulacionExtraccion" />
-        <activity android:name="com.packages.prolactancia.ProtegeLactancia" />
-        <activity android:name="com.packages.prolactancia.SoloPecho" />
-        <activity android:name="com.packages.prolactancia.DuermeSuelta" />
-        <activity android:name="com.packages.prolactancia.AumentarProduccion" />
-        <activity android:name="com.packages.prolactancia.FrecuenciaSuccion" />
-        <activity android:name="com.packages.prolactancia.MenuFrecuenciaLactar" />
-        <activity android:name="com.packages.prolactancia.SuccionPosicion" />
-        <activity android:name="com.packages.prolactancia.MadreEnferma" />
-        <activity android:name="com.packages.prolactancia.Abceso" />
-        <activity android:name="com.packages.prolactancia.Mastitis" />
-        <activity android:name="com.packages.prolactancia.DuctosObstruidos" />
-        <activity android:name="com.packages.prolactancia.DolorGrietas" />
-        <activity android:name="com.packages.prolactancia.PechosCongestionados" />
-        <activity android:name="com.packages.prolactancia.Alimentacion" />
-        <activity android:name="com.packages.prolactancia.MenuProblemasLactancia" />
-        <activity android:name="com.packages.prolactancia.MenuLactancia" />
-        <activity android:name="com.packages.prolactancia.Higiene" />
-        <activity android:name="com.packages.prolactancia.Beneficios" />
-        <activity android:name="com.packages.prolactancia.MenuPrincipal" />
-        <activity android:name="com.packages.prolactancia.MainActivity">
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
+        <activity android:name=".VideoBeneficios2" />
+        <activity android:name=".Maps" />
+        <activity android:name=".VideoHigiene" />
+        <activity android:name=".VideoBeneficios" />
+        <activity android:name=".MitosVerdades" />
+        <activity android:name=".Donacion" />
+        <activity android:name=".AlmacenamientoTraslado" />
+        <activity android:name=".MenuExtraccion" />
+        <activity android:name=".EstimulacionExtraccion" />
+        <activity android:name=".ProtegeLactancia" />
+        <activity android:name=".SoloPecho" />
+        <activity android:name=".DuermeSuelta" />
+        <activity android:name=".AumentarProduccion" />
+        <activity android:name=".FrecuenciaSuccion" />
+        <activity android:name=".MenuFrecuenciaLactar" />
+        <activity android:name=".SuccionPosicion" />
+        <activity android:name=".MadreEnferma" />
+        <activity android:name=".Abceso" />
+        <activity android:name=".Mastitis" />
+        <activity android:name=".DuctosObstruidos" />
+        <activity android:name=".DolorGrietas" />
+        <activity android:name=".PechosCongestionados" />
+        <activity android:name=".Alimentacion" />
+        <activity android:name=".MenuProblemasLactancia" />
+        <activity android:name=".MenuLactancia" />
+        <activity android:name=".Higiene" />
+        <activity android:name=".Beneficios" />
+        <activity android:name=".MenuPrincipal" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
